# UI-Layer

./: .gitignore  LICENSE  LICENSE-MIT  README.md
.devcontainer/: devcontainer.json
data-display/: Cargo.toml  datagen.py
data-display/data/: mockdata.csv
data-display/src/: app.rs  display.rs  login.rs  main.rs
data-display/src/display/: account.rs  data.rs  device.rs  login.rs  sessions.rs
data-display/temp_data/: mockdata.csv
