[package]
name = "data-display"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = "0.30.0"
wasm-bindgen = "0.2.99"
log = "0.4.22"
# serde only required for persistence
serde = { version = "1.0.217", features = ["derive"] }
csv = "1.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
